--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".MyApplication"
@@ -53,7 +53,8 @@
             android:configChanges="orientation|keyboardHidden|screenSize|screenLayout"
             android:label="@string/settings"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".other_pages.OpenSourceLicenseActivity"
+        <activity
+            android:name=".other_pages.OpenSourceLicenseActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|screenLayout"
             android:label="@string/open_source_license"
             android:theme="@style/AppTheme.NoActionBar" />
